--- a/templates/home.html
+++ b/templates/home.html
@@ -38,9 +38,10 @@
         <p class="text-muted">{% now "jS F Y" %}</p>
         <div class="col-md-7 col-lg-7" style="height: 450px; overflow: scroll">
           <!-- List of all the tasks for the day -->
+          {% for tc in tasksnotdone %}
           <div class="card m-1">
             <div class="card-body">
-              This is some Task
+              {{ tc.task}}
               <span style="position: relative; float: right">
                 <a class="btn btn-success"
                   ><i class="fa fa-check"></i> Mark as Done</a
@@ -50,13 +51,17 @@
               </span>
             </div>
           </div>
+          {% endfor %}
         </div>
+
         <div class="col-md-5 col-lg-5">
           <h5>Completed Tasks</h5>
           <!-- List of all the tasks that have completed -->
+          {% for tc in tasksdone %}
           <div class="card m-1">
-            <div class="card-body">This is the completed task.</div>
+            <div class="card-body">{{ tc.task }}</div>
           </div>
+          {% endfor %}
         </div>
       </div>
       <div class="row">
@@ -65,15 +70,22 @@
           style="position: absolute; bottom: 50px"
         >
           <!-- To Do Form -->
-          <form action="">
+          <form action="{% url 'addtask' %}" method="post">
+            {% csrf_token %}
+
             <div class="form-group">
               <span style="display: flex">
                 <input
                   type="text"
+                  name="task"
                   class="form-control"
                   placeholder="Add a task"
                 />
-                <button class="btn btn-primary" style="width: 200px">
+                <button
+                  class="btn btn-primary"
+                  style="width: 200px"
+                  type="submit"
+                >
                   <i class="fa fa-plus"></i> Add
                 </button>
               </span>
